--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -6,7 +6,7 @@ pid_file: "/var/run/nats/nats.pid"
 
 # Monitoring
 http_port: 8222
-server_name: $POD_NAME
+server_name: $KUBEFOX_POD
 
 lame_duck_duration:     30s
 lame_duck_grace_period: 10s
@@ -19,9 +19,9 @@ jetstream {
 }
 
 tls {
-    cert_file: "/tmp/kubefox/tls.crt"
-    key_file:  "/tmp/kubefox/tls.key"
-    ca_file:   "/tmp/kubefox/ca.crt"
+    cert_file: "{{ homePath }}/tls.crt"
+    key_file:  "{{ homePath }}/tls.key"
+    ca_file:   "{{ homePath }}/ca.crt"
     verify_and_map: true
 }
 
