--- a/components/operator/templates/instance/configmap-pki-init.yaml
+++ b/components/operator/templates/instance/configmap-pki-init.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ name }}-pki-init
+  name: {{ .Instance.Name }}-pki-init
   namespace: {{ namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
