--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -5,11 +5,13 @@ port: 4222
 pid_file: "/var/run/nats/nats.pid"
 
 # Monitoring
-http_port: 8222
+http_port:   8222
 server_name: $KUBEFOX_POD
 
 lame_duck_duration:     30s
 lame_duck_grace_period: 10s
+
+max_payload: 5Mi
 
 # NATS JetStream
 jetstream {
