removed event kv

--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -16,7 +16,7 @@ max_payload: 5Mi
 # NATS JetStream
 jetstream {
     max_mem:   0Gi
-    max_file:  8Gi
+    max_file:  {{ .Values.volumeSize | default "8Gi" }}
     store_dir: "/data"
 }
 
