properly quote env vars to avoid type mismatches

--- a/components/operator/templates/instance/configmap-env.yaml
+++ b/components/operator/templates/instance/configmap-env.yaml
@@ -10,13 +10,13 @@ metadata:
     {{- . | toYaml | nindent 4 }}
   {{- end }}
 data:
-  KUBEFOX_HOME: {{ homePath }}
-  KUBEFOX_INSTANCE_NAMESPACE: {{ .Instance.Namespace }}
-  KUBEFOX_INSTANCE: {{ .Instance.Name }}
-  KUBEFOX_NAMESPACE: {{ namespace }}
+  KUBEFOX_HOME: {{ homePath | quote }}
+  KUBEFOX_INSTANCE_NAMESPACE: {{ .Instance.Namespace | quote }}
+  KUBEFOX_INSTANCE: {{ .Instance.Name | quote }}
+  KUBEFOX_NAMESPACE: {{ namespace | quote }}
   {{- with .Platform.LogFormat }}
-  KUBEFOX_LOG_FORMAT: {{ . }}
+  KUBEFOX_LOG_FORMAT: {{ . | quote }}
   {{- end }}
   {{- with .Platform.LogLevel }}
-  KUBEFOX_LOG_LEVEL: {{ . }}
+  KUBEFOX_LOG_LEVEL: {{ . | quote }}
   {{- end }}
