--- a/components/operator/templates/nats/statefulset.yaml
+++ b/components/operator/templates/nats/statefulset.yaml
@@ -18,30 +18,7 @@ spec:
       {{- include "podSpec" . | nindent 6 }}
       shareProcessNamespace: true
       initContainers:
-        - name: pki-init
-          image: {{ .Values.pkiInitImage | quote }}
-          imagePullPolicy: {{ .Component.ImagePullPolicy | default "IfNotPresent" }}
-          {{- include "containerSecurityContext" . | nindent 10 }}
-          command:
-            - /pki-init.sh
-          env:
-          {{- include "env" . | nindent 12 }}
-            - name: KUBEFOX_COMPONENT_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
-          envFrom:
-            - configMapRef:
-                name: {{ name }}-env
-          volumeMounts:
-            - name: pki-init
-              mountPath: /pki-init.sh
-              subPath: pki-init.sh
-            - name: root-ca
-              mountPath: {{ homePath }}/ca.crt
-              subPath: ca.crt
-            - name: kubefox
-              mountPath: {{ homePath }}
+        - {{- include "bootstrap" . | nindent 10 }}
       containers:
         - name: {{ .Component.Name }}
           image: {{ .Component.Image | default (printf "%s/%s:%s" .App.Registry .Component.Name .Component.Commit) | quote }}
@@ -132,10 +109,6 @@ spec:
         - name: root-ca
           configMap:
             name: {{ .Instance.Name }}-root-ca
-        - name: pki-init
-          configMap:
-            name: {{ name }}-pki-init
-            defaultMode: 0777
         - name: kubefox
           emptyDir: {}
   volumeClaimTemplates:
