--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -8,21 +8,20 @@ site_author: John Long
 copyright: Copyright © XigXog
 
 nav:
-  - 'Overview': 'index.md'
-  - 'Quickstart': 'quickstart.md'
-  - 'Challenges in Kubernetes': 'kubernetes_challenges.md'
-  - 'Why KubeFox?': 'why_kubefox.md'
-  - 'Concepts': 'concepts.md'
-  - 'Design': 'design.md'
-  - 'Versioned Deployments': 'versioned_deployments.md'
-  - 'Deployment Distillation': 'deployment_distillation.md'
-  - 'Dynamic Routing': 'dynamic_routing.md'
-  - 'Virtual Environments': 'virtual_environments.md'
-  - 'Telemetry': 'telemetry.md'
+  - index.md
+  - quickstart.md
+  - kubernetes_challenges.md
+  - why_kubefox.md
+  - concepts.md
+  - design.md
+  - versioned_deployments.md
+  - deployment_distillation.md
+  - dynamic_routing.md
+  - virtual_environments.md
+  - telemetry.md
   - Reference:
       - reference/events.md
-      - reference/protobuf_msgs.md
-      - reference/broker_svc.md
+      - reference/protobuf.md
 
 extra:
   homepage: https://kubefox.io
@@ -46,10 +45,7 @@ theme:
   favicon: images/favicon.ico
   icon:
     repo: fontawesome/brands/github
-  # custom_dir: docs/overrides
   font: false
-    # text: Open Sans
-    # code: Source Code Pro
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
@@ -91,7 +87,7 @@ markdown_extensions:
   - def_list
   - pymdownx.details
   - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji 
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.highlight:
       anchor_linenums: true
