--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,6 @@ jobs:
     runs-on: ubuntu-22.04
     needs: setup
     strategy:
-      fail-fast: false
       matrix:
         component: ${{ fromJSON(needs.setup.outputs.components) }}
 
@@ -88,8 +87,8 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: components/${{ matrix.component }}/go.mod
-          cache-dependency-path: components/${{ matrix.component }}/go.sum
+          go-version-file: go.mod
+          cache-dependency-path: go.sum
 
       - name: Build and push component
         run: |
