--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -92,7 +92,7 @@ jobs:
 
       - name: Build and push component
         run: |
-          make push COMPONENT=${{ matrix.component }}
+          make push COMPONENT=${{ matrix.component }} COMPRESS=true
 
   release:
     name: Release
