parallelized make all and removed matrix build

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,22 +9,6 @@ on:
       - "v*.*.*"
 
 jobs:
-  setup:
-    name: Setup
-    runs-on: ubuntu-22.04
-    outputs:
-      components: ${{ steps.set-matrix.outputs.components }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - id: set-matrix
-        name: Output component builds
-        run: |
-          echo "components=$(ls ./components/ | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
-          cat $GITHUB_OUTPUT
-
   publish-docs:
     name: Publish docs
     runs-on: ubuntu-22.04
@@ -56,13 +40,9 @@ jobs:
       - name: Publish docs
         uses: actions/deploy-pages@v2
 
-  publish-component:
+  publish-components:
     name: Publish components
     runs-on: ubuntu-22.04
-    needs: setup
-    strategy:
-      matrix:
-        component: ${{ fromJSON(needs.setup.outputs.components) }}
 
     permissions:
       contents: read
@@ -96,15 +76,14 @@ jobs:
           go-version-file: go.mod
           cache-dependency-path: go.sum
 
-      - name: Build and push component
-        run: |
-          make push COMPONENT=${{ matrix.component }} COMPRESS=true
+      - name: Build and push components
+        run: make all COMPRESS=true PUSH=true
 
   release:
     name: Release
     runs-on: ubuntu-22.04
     if: startsWith(github.ref, 'refs/tags/v')
-    needs: publish-component
+    needs: publish-components
 
     permissions:
       contents: write
