--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,7 +81,7 @@ jobs:
       packages: write
 
     env:
-      IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+      CONTAINER_REGISTRY: ghcr.io/${{ github.repository_owner }}
       REGISTRY_USERNAME: ${{ github.actor }}
       REGISTRY_PASSWORD: ${{ github.token }}
 
@@ -92,7 +92,7 @@ jobs:
       - name: Log in to ghcr.io
         uses: redhat-actions/podman-login@v1
         with:
-          registry: ${{ env.IMAGE_REGISTRY }}
+          registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ env.REGISTRY_USERNAME }}
           password: ${{ env.REGISTRY_PASSWORD }}
 
