--- a/api/crds/kubefox.xigxog.io_releases.yaml
+++ b/api/crds/kubefox.xigxog.io_releases.yaml
@@ -39,20 +39,6 @@ spec:
                 properties:
                   app:
                     properties:
-                      adapters:
-                        additionalProperties:
-                          properties:
-                            type:
-                              enum:
-                              - graphql
-                              - http
-                              - kv
-                              - object
-                              type: string
-                          required:
-                          - type
-                          type: object
-                        type: object
                       branch:
                         type: string
                       commit:
@@ -62,7 +48,7 @@ spec:
                         type: string
                       description:
                         type: string
-                      imagePullSecret:
+                      imagePullSecretName:
                         type: string
                       name:
                         type: string
@@ -85,31 +71,6 @@ spec:
                           type: string
                         description:
                           type: string
-                        env:
-                          properties:
-                            required:
-                              items:
-                                type: string
-                              type: array
-                            vars:
-                              additionalProperties:
-                                properties:
-                                  description:
-                                    type: string
-                                  title:
-                                    type: string
-                                  type:
-                                    enum:
-                                    - array
-                                    - boolean
-                                    - number
-                                    - string
-                                    type: string
-                                required:
-                                - type
-                                type: object
-                              type: object
-                          type: object
                         image:
                           type: string
                         title:
@@ -146,6 +107,11 @@ spec:
             type: object
           status:
             description: ReleaseStatus defines the observed state of Release
+            properties:
+              ready:
+                type: boolean
+            required:
+            - ready
             type: object
         type: object
     served: true
